# elaborato-esame

./: CMakeLists.txt  game.cpp  game.h  glitch.cpp  glitch.h  glitch_handler.cpp  glitch_handler.h  main.cpp  map.cpp  map.h  map_factory.cpp  map_factory.h  player.cpp  player.h  shortid.cpp  shortid.h  update_builder.cpp  update_builder.h  utils.cpp  utils.h
resources/glitchlists/: dVPJAyAPVFPJAAPf.json
resources/maps/: default-map.json
unit_testing/: CMakeLists.txt  bad_json_glitch.json  bad_json_glitch_output.json  game_builder_json_output.json  game_fixture.cpp  game_upd_bld_fixture.cpp  glitch_builder_json_output.json  glitch_factory_test_fixture.cpp  glitch_handler_test.cpp  glitch_test_fixture.cpp  glitch_upd_bld_fixture.cpp  map_factory_test.cpp  map_fixture.cpp  shortid_test.cpp  test.cpp  test_utf8.txt  utils_test.cpp
